--- a/cobalt-canvas-landing-main/index.html
+++ b/cobalt-canvas-landing-main/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeddingPro - Platform Pernikahan Digital Terdepan</title>
+    <title>MyWeddingApp - Platform Pernikahan Digital Terdepan</title>
     <meta name="description" content="Platform pernikahan digital terdepan di Indonesia. Buat undangan digital yang elegant, kelola tamu dengan mudah, dan rencanakan pernikahan impian Anda." />
     <meta name="keywords" content="undangan digital, pernikahan, wedding planner, e-invitation, RSVP, wedding platform" />
-    <meta name="author" content="WeddingPro" />
-    <link rel="canonical" href="https://weddingpro.id" />
+    <meta name="author" content="MyWeddingApp" />
+    <link rel="canonical" href="https://myweddingapp.id" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="WeddingPro - Platform Pernikahan Digital Terdepan" />
+    <meta property="og:title" content="MyWeddingApp - Platform Pernikahan Digital Terdepan" />
     <meta property="og:description" content="Solusi pernikahan lebih hemat, praktis, dan kekinian dengan e-invitation yang disebar otomatis. Bergabunglah dengan 10,000+ pasangan bahagia." />
-    <meta property="og:image" content="https://weddingpro.id/og-image.jpg" />
-    <meta property="og:url" content="https://weddingpro.id" />
+    <meta property="og:image" content="https://myweddingapp.id/og-image.jpg" />
+    <meta property="og:url" content="https://myweddingapp.id" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="WeddingPro - Platform Pernikahan Digital Terdepan" />
+    <meta name="twitter:title" content="MyWeddingApp - Platform Pernikahan Digital Terdepan" />
     <meta name="twitter:description" content="Solusi pernikahan lebih hemat, praktis, dan kekinian dengan e-invitation yang disebar otomatis." />
-    <meta name="twitter:image" content="https://weddingpro.id/og-image.jpg" />
+    <meta name="twitter:image" content="https://myweddingapp.id/og-image.jpg" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
